--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../imagens/fundooo.gif);
+    background-image: url(../imagens/fundo3.gif);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -12,11 +12,13 @@ body{
     min-height: 100vh;
     padding: 30px;
 }
-
+span p {
+    
+}
 .cartao{
     background-color: #070d12;
     width: 370px;
-    border: 2px solid #02d08f;
+    border: 3px solid #269199;
     border-radius: 10px;
     overflow: hidden;
 }
@@ -31,7 +33,7 @@ body{
 
 .cartao .minhas-informacoes img {
     border-radius: 50px;
-    border: 4px solid #02d08f;
+    border: 4px solid #269199;
 }
 
 .cartao .minhas-informacoes .nome{
@@ -53,7 +55,7 @@ body{
 }
 
 .cartao .abas .aba{
-    width: 50%;
+    width: 33.33%;
     display: flex;
     justify-content: center;
     padding: 10px 0;
@@ -137,7 +139,54 @@ body{
     background-color: #545454;
 }
 
+.projetos{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+    max-height: 180px;
+    overflow-y: auto;
+}
+.projetos li a{
+    background-color: red;
+    width: 250px;
+    display: block;
+    color: #f3f3f3;
+    text-align: center;
+    padding: 10px;
+    font-size: 20px;
+    border-radius: 10px;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.projetos .front-mario{
+    background-color: #d5011d;
+}
+
+.projetos .github-page{
+    background-color: #1d87bd;
+}
+
+.projetos .loja-nft{
+    background-color: #f60069;
+}
+
+.projetos .calendario{
+    background-color: #049c34;
+}
+
+.projetos .dark-mode{
+    background-color: #4f2958;
+}
+
+.projetos .mini-portifolio{
+    background-color: #040c14;
+}
+
 .redes-sociais li a:hover{
     opacity: 0.8;
 }
 
+.projetos li a:hover{
+    opacity: 1.8;
+}
